# AWS-fastapi-app

./: .flake8  Dockerfile  README.md  __buildspec1.yml  buildspec.yml  colima.md  diagram.uml  item.json  pyproject.toml  revert_git.md
.github/workflows/: aws.yml  deploy.yml  release.yml
app/: main.py
app/api/: __init__.py  dependencies.py
app/api/endpoints/: __init__.py  items.py  users.py
app/core/: __init__.py  config.py  manager.py
app/schemas/: item.py  user.py
app/video_processing/: main.py
app/views/templates/: api_docs.html  index.html
tests/: test_items.py  test_users.py
