[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "A FastAPI application with endpoints for items and users."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
packages = [{include = "app"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = false